fix: allow values cards to wrap on mobile

--- a/css/homepage/homepage.css
+++ b/css/homepage/homepage.css
@@ -42,13 +42,14 @@
 } */
 
 .values__card {
-  width: 30%;
+  width: 100%;
 }
 
 .values__container {
   display: flex;
   justify-content: space-between;
   gap: 1rem;
+  flex-wrap: wrap;
 }
 
 @media (min-width: 768px) {
@@ -62,5 +63,9 @@
 
   .goals__card {
     width: calc(50% - 0.5rem);
+  }
+
+  .values__card {
+    width: 30%;
   }
 }
